# Automated-Whatsapp-Event-Invitation-Script

./: README.md  main.py  pyproject.toml  requirements.txt
excels/: Sample Excel.csv
messages/: test
src/autowa-event/excels/: Sample Excel.csv
src/autowa_event/: main.py
